Iris: Add tiered settings system (#6710)